# tray-emergency-hue

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md  resources.rc
src/: config.rs  hue.rs  main.rs  notification.rs  tray.rs
